# org_examine_rs

./: Cargo.toml  config.yaml
src/: http.rs  main.rs
src/app/: mod.rs  org_examination.rs  org_examine.rs  org_examine_paper.rs  org_examine_result.rs  org_paper.rs  org_union.rs  redis_util.rs  sys_group.rs  sys_role.rs  sys_user.rs
src/controller/: auths.rs  html_controller.rs  mod.rs  org_controller.rs  sys_controller.rs  test_controller.rs
src/util/: datatime.rs  mod.rs  permission.rs
templates/: index.html  login.html
templates/examination/: check.html  client.html  update.html
templates/examine/: check.html  client.html  paper.html  result.html  start.html  update.html  update2.html  update3.html  update4.html
templates/paper/: index.html  insert.html  update.html
templates/public/: login.tsx  setting.html
templates/union/: index.html
templates/user/: index.html  insert.html  update.html
