[package]
name = "org_system_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "*"
serde_yaml = "*"
askama_axum = "*"
bcrypt = "*"
rand = "*"
urlencoding = "*"
futures = "*"
futures-util = "*"
http-body = "*"
http-body-util = "*"
rust-crypto = "*"

[dependencies.tokio]
version = "*"
features = ["full"]

[dependencies.tower]
version = "*"
features = ["full"]

[dependencies.tower-http]
version = "*"
features = ["full"]

[dependencies.axum]
version = "*"
features = ["json", "multipart", "tokio", "ws", "form", "original-uri", "query"]

[dependencies.askama]
version = "*"
features = ["default", "with-axum", "serde", "serde-json"]

[dependencies.serde]
version = "*"
features = ["derive"]

[dependencies.sqlx]
version = "*"
features = ["default", "mysql", "runtime-tokio", "chrono", "json"]

[dependencies.redis]
version = "*"
features = ["default", "serde"]

[dependencies.reqwest]
version = "*"
features = ["serde_json", "cookies", "json"]

[dependencies.chrono]
version = "*"
features = ["serde"]